--- a/src/pages/Dev.modules.css
+++ b/src/pages/Dev.modules.css
@@ -9,7 +9,6 @@ html, body {
     align-items: start;
     width: 100vw;
     height: 80vh;
-    /* background-color: green; */
 }
 
 .content {
@@ -69,23 +68,28 @@ html, body {
         justify-content: start;
         align-items: start;
         width: 100vw;
-        height: 80vh;
+        height: 40vh;
+
+        background-image: url('../assets/estampa-rotate.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
     }
 
     .content {
         width: 100vw;
-        height: 80vh;
+        height: 70vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         gap: 0px;
-        padding-top: 16px;
+        padding-top: 0px;
     }
     
     .red {
-        width: 70vw;
-        height: auto;
+        width: 0px;
+        height: 0px;
         margin-left: 0px;
     }
 
