--- a/src/pages/Dev.modules.css
+++ b/src/pages/Dev.modules.css
@@ -70,7 +70,7 @@ html, body {
         width: 100vw;
         height: 100%;
 
-        background-image: url('../assets/estampa-rotate.png');
+        background-image: url('../assets/estampa.png');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
