--- a/src/components/MenuTopo/MenuTopo.modules.css
+++ b/src/components/MenuTopo/MenuTopo.modules.css
@@ -13,6 +13,7 @@
     box-sizing: border-box;
     justify-content: start;
     padding-left: 4vw;
+    padding-right: 4vw;
     padding-top: 3.5vh;
     width: 50%;
     height: 100%;
@@ -22,7 +23,8 @@
 .back-button {
     background: none;
     border: none;
-    padding: 0px;
+    box-sizing: border-box;
+    padding-bottom: 5px;
     font-size: 30px;
     color: white; 
     font-weight: bold;
@@ -55,7 +57,8 @@
 }
 
 .menu-topicos {
-
+    box-sizing: border-box;
+    padding-bottom: 4px;
 }
 
 .menu-link {
@@ -126,11 +129,13 @@
         justify-content: center; /* Centraliza tudo */
         width: 100%; /* Ocupa toda a largura */
         position: relative; /* Permite posicionamento absoluto */
+        padding-left: 0vw;
+        padding-right: 4vw;
     }
 
     .back-button {
         position: absolute;
-        left: 15px; /* Posiciona o chevron à esquerda */
+        left: 0px; /* Posiciona o chevron à esquerda */
     }
 
     .menu-right {
