--- a/src/pages/ProjectDetail.modules.css
+++ b/src/pages/ProjectDetail.modules.css
@@ -17,55 +17,41 @@ html, body {
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: 80vh;
-    /* background-color: red; */
+    height: 90vh;
 }
 
 .background-details {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-width: 70vw;
-    max-height: 60vh;
-    background-color: #333;
-    box-sizing: border-box;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    gap: 12px
-}
-
-.background-details.vertical {
+    width: 100%;
+    height: 70vh;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: start;
     align-items: start;
-    padding-left: 15px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    box-sizing: border-box;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+    scrollbar-width: none;
+    gap: 24px;
+    padding-left: 10vw;
+    padding-right: 10vw;
+}
+
+.background-details::-webkit-scrollbar {
+    display: none;
 }
 
 .box-top-description-details {
-    width: auto;
-    height: auto;
+    width: 30vw;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 12px;
-    /* background-color: greenyellow; */
-}
-
-.box-top-description-details.vertical {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    /* background-color: greenyellow; */
+    gap: 16px;
 }
 
 .top-details {
-    width: auto;
+    width: 100%;
     height: auto;
     display: flex;
     flex-direction: row;
@@ -73,18 +59,6 @@ html, body {
     align-items: center;
     gap: 10px;
     box-sizing: border-box;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.top-details.vertical {
-    width: auto;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center;
-    padding-left: 0px;
 }
 
 .box-icon-details {
@@ -98,7 +72,7 @@ html, body {
 
 .size-icon-details { 
     width: auto;
-    height: 16vh;
+    height: 15vh;
 }
 
 .box-title-details {
@@ -113,15 +87,18 @@ html, body {
 
 .title-details {
     width: 100%;
-    height: 6vh;
+    height: 5vh;
     font-size: 1.5rem;
 }
 
 .subtitle-details {
     width: 100%;
-    height: 6vh;
+    height: 5vh;
     font-size: 0.9rem;
     font-family: "Arial";
+    white-space: normal;
+    word-wrap: break-word; 
+    overflow-wrap: break-word;
 }
 
 .box-badgets-details {
@@ -130,7 +107,7 @@ html, body {
     justify-content: start;
     align-items: start;
     width: auto;
-    height: 4vh;
+    height: 5vh;
 }
 
 .size-badget-details {
@@ -139,72 +116,22 @@ html, body {
     margin-right: 0.5vw;
 }
 
-.size-badget-details.hidden {
-    width: 0px;
-    height: 0px;
-    margin-right: 0.5vw;
-}
-
 .description-details {
-    width: auto;
+    width: 30vw;
     height: auto;
     text-align: left;
     align-items: center;
     font-family: "Arial";
     box-sizing: border-box;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.description-details.vertical {
-    width: auto;
-    height: auto;
-    font-family: "Arial";
-    text-align: left;
-    align-items: center;
-    padding-right: 0px;
-    padding-left: 0px;
+    white-space: normal;
+    word-wrap: break-word; 
+    overflow-wrap: break-word;
 }
 
 .images-details {
-    width: 100%;
-    height: 50%;
-    overflow-y: hidden;
-    overflow-x: auto;
-    display: flex;
-    flex-direction: row;
-    gap: 15px;
-    box-sizing: border-box;
-    padding-left: 12px;
-    padding-right: 12px;
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none; /* Internet Explorer e Edge */
-}
-  
-.images-details::-webkit-scrollbar {
-    display: none; /* Esconde a scrollbar no Chrome, Safari e Edge */
-}
-
-.images-details.vertical {
     width: auto;
     height: 100%;
-    overflow-y: hidden;
-    overflow-x: auto;
-    display: flex;
-    flex-direction: row;
-}
-
-.images-details.hidden {
-    width: 0px;
-    height: 0px;
-}
-
-.images-details.only {
-    width: auto;
-    height: 60vh;
-    overflow-y: hidden;
-    overflow-x: hidden;
-    display: flex;
+    align-items: start;
     flex-direction: row;
 }
 
@@ -212,208 +139,192 @@ html, body {
     width: auto;
     height: 100%;
     object-fit: contain;
+    box-sizing: border-box;
+    padding-right: 12px;
 }
 
-.size-images-details.vertical {
+
+.images-details.horizontal {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 50%;
     width: auto;
-    height: 100%;
-    object-fit: contain;
 }
 
-.size-images-details.only {
-    width: 30vw;
-    height: auto;
+.size-images-details.horizontal {
+    box-sizing: border-box;
+    padding-right: 12px;
+    padding-bottom: 12px;
     object-fit: contain;
 }
-
 
 
 
 
 @media (max-width: 768px) {
+    html, body {
+        overflow: hidden;
+    }
+    
+    .dev-icon-container-details {
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+        width: 100vw;
+        height: 100vh;
+    }
+    
     .general-container-details {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         width: 100vw;
-        height: 100%;
-        box-sizing: border-box;
-        padding-bottom: 20vh;
-    }
-
-    .background-details {
-        width: 85vw;
-        height: auto;
-        background-color: #333;
+        height: 70vh;
     }
     
-    .background-details.vertical {
-        width: 85vw;
-        flex-direction: column;
-        padding: 0px;
-    }
-
-    .box-top-description-details {
+    .background-details {
         width: 100%;
+        height: 60vh;
+        display: flex;
+        flex-direction: row;
+        justify-content: start;
+        align-items: start;
+        box-sizing: border-box;
+        overflow-x: auto;
+        overflow-y: hidden;
+        white-space: nowrap;
+        scrollbar-width: none;
+        gap: 24px;
+        padding-left: 5vw;
+        padding-right: 5vw;
+    }
+    
+    .background-details::-webkit-scrollbar {
+        display: none;
+    }
+    
+    .box-top-description-details {
+        min-width: 70vw;
+        width: 90vw;
         height: auto;
         display: flex;
         flex-direction: column;
-        justify-content: start;
-        align-items: start;
+        align-items: flex-start;
+        gap: 16px;
     }
-
+    
     .top-details {
-        width: auto;
+        width: 100%;
         height: auto;
         display: flex;
         flex-direction: row;
         justify-content: start;
-        align-items: center;
-        padding: 0px;
+        align-items: start;
+        gap: 10px;
+        box-sizing: border-box;
     }
     
-    .top-details.vertical {
-        width: 100%;
-        height: auto;
-        padding: 12px;
-    }
-
     .box-icon-details {
         display: flex;
         flex-direction: row;
         justify-content: start;
         align-items: center;
         aspect-ratio: 1 / 1;
-    }
-
-    .box-top-description-details {
-        width: 100%;
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 12px;
-        box-sizing: border-box;
-        padding-left: 12px;
-        padding-right: 12px;
-    }
-
-    .box-top-description-details.vertical {
-        width: 100%;
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 0px;
-        padding: 0px;
+        height: 20%;
     }
     
-
+    .size-icon-details { 
+        width: auto;
+        height: 15vh;
+    }
+    
+    .box-title-details {
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: start;
+        text-align: left;
+        width: auto;
+        height: 100%;
+    }
+    
     .title-details {
         width: 100%;
-        height: 4.5vh;
-        font-size: 1.2rem;
-        text-align: left;
+        height: 5vh;
+        font-size: 1.0rem;
+        white-space: normal;
+        word-wrap: break-word; 
+        overflow-wrap: break-word;
     }
     
     .subtitle-details {
-        height: 5vh;
+        width: 100%;
+        height: 7vh;
         font-size: 0.8rem;
-        text-align: left;
-        line-height: 1.0;
+        font-family: "Arial";
+        white-space: normal;
+        word-wrap: break-word; 
+        overflow-wrap: break-word;
     }
-
+    
     .box-badgets-details {
         display: flex;
         flex-direction: row;
         justify-content: start;
         align-items: start;
         width: 100%;
-        height: 3.5vh;
+        height: 3vh;
     }
-
+    
     .size-badget-details {
         width: auto;
-        height: 3.5vh;
-        margin-right: 5px;
+        height: 100%;
+        margin-right: 0.5vw;
     }
-
-
+    
     .description-details {
         width: 100%;
-        font-size: 0.5rem;
-        padding: 0px;
-    }
-    
-    .description-details.vertical {
-        width: 100%;
         height: auto;
-        font-family: "Arial";
+        font-size: 0.9rem;
         text-align: left;
         align-items: center;
-        padding-left: 12px;
-        padding-right: 12px;
+        font-family: "Arial";
+        box-sizing: border-box;
+        white-space: normal;
+        word-wrap: break-word; 
+        overflow-wrap: break-word;
     }
-
+    
     .images-details {
-        width: 100%;
-        height: auto;
-        overflow-y: hidden;
-        overflow-x: auto;
-        display: flex;
-        flex-direction: row;
-    }
-
-    .images-details.vertical {
-        width: 100%;
-        height: 20vh;
-        overflow-y: hidden;
-        overflow-x: auto;
-        display: flex;
-        flex-direction: row;
-        padding-bottom: 12px;
-        gap: 8px;
-    }
-    
-    .images-details.hidden {
-        width: 0px;
-        height: 0px;
-    }
-    
-    .images-details.only {
         width: auto;
-        height: 20vh;
-        overflow-y: hidden;
-        overflow-x: hidden;
-        display: flex;
+        height: 100%;
+        align-items: start;
         flex-direction: row;
     }
-
+    
     .size-images-details {
         width: auto;
-        height: 12vh;
+        height: 100%;
         object-fit: contain;
-        justify-content: center;
-        align-items: center;
+        box-sizing: border-box;
+        padding-right: 12px;
     }
     
-    .size-images-details.vertical {
+    
+    .images-details.horizontal {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 50%;
         width: auto;
-        height: auto;
-        object-fit: contain;
-        justify-content: center;
-        align-items: center;
     }
     
-    .size-images-details.only {
-        width: auto;
-        height: 23vh;
+    .size-images-details.horizontal {
+        box-sizing: border-box;
+        padding-right: 12px;
+        padding-bottom: 12px;
         object-fit: contain;
     }
-
-    .size-icon-details { 
-        width: auto;
-        height: 13vh;
-    }
+    
 }
