--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Arial Black";
-  src: url("../assets/fonts/ArialBlackGstv.ttf") format("truetype");
+  src: url("/fonts/ArialBlackGstv.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
